--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "debounce": "2.2.0",
+    "moment": "2.30.1",
+    "shorten-hexdcolor": "0.2.1"
+  }
 }
