--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dependencies-npm",
-  "version": "1.0.0",
+  "version": "4.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,9 @@
   "dependencies": {
     "debounce": "2.2.0",
     "moment": "2.30.1",
-    "qubris-sheets": "1.0.1",
-    "shorten-hexdcolor": "0.2.1"
+    "produkt_test_1": "1.0.1",
+    "qubris-sheets": "1.0.0",
+    "shorten-hexdcolor": "0.2.1",
+    "test1": "1.0.0"
   }
 }
